Centered nav brand

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="index-banner">
         <nav class="navbar"> 
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand mx-auto" href="#">
                 <img src="assets/img/logo.png" class="d-inline-block align-top navbar-logo" alt="">
             </a>
             <section>
